--- a/lambda/build.gradle
+++ b/lambda/build.gradle
@@ -39,6 +39,13 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    // Testing dependencies
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 }
 
 jar {
@@ -49,4 +56,8 @@ jar {
 
 tasks.named('shadowJar') {
     archiveFileName = "lambda.jar"
+}
+
+test {
+    useJUnitPlatform()
 }
